...
<resources>
    <string name="album_cover_description">Carátula de álbum</string>
    <string name="album_icon_desc">Ícono de álbum</string>
    <string name="albums_label">Álbumes</string>
    <string name="app_name">Vinilos-E15</string>
    <string name="chevron_icon_desc">Flecha de navegación</string>
    <string name="error_loading_content">Error al cargar contenido. Por favor intenta de nuevo.</string>
    <string name="musician_image_description">Imagen del artista %s</string>
    <string name="no_albums_found">No se encontraron álbumes</string>
    <string name="no_artists_found">No se encontraron artistas</string>
    <string name="no_results_for_query">Sin resultados para "%s"</string>
    <string name="no_collectors_found">No se encontraron coleccionistas</string>
    <string name="no_prizes">Sin premios</string>
    <string name="search_hint_album">Buscar álbum…</string>
    <string name="search_hint_artist">Buscar artista…</string>
    <string name="search_hint_collectors">Buscar coleccionistas…</string>
    <string name="see_less_label">Ver menos</string>
    <string name="see_more_label">Ver más</string>
    <string name="sort_date">FECHA</string>
...
